--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "axios-interceptors": "^0.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-progress-bar": "^0.1.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.11.2",
     "react-scripts": "5.0.1",
+    "react-step-progress-bar": "^1.0.3",
     "react-toastify": "^9.1.3",
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
